--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -4,7 +4,7 @@
     <h1 class="mt-5">Caja</h1>
 
     <div class="row mt-4">
-        <h3>Estado de la Caja</h3>
+        <h3>Estado de la Caja Abierta</h3>
         <table class="table">
             <thead>
                 <tr>
@@ -19,26 +19,61 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>${{caja.apertura}}</td>
-                    <td>${{caja.t_transferencia}}</td>
-                    <td>${{caja.total_ventas_dia}}</td>
-                    <td>${{caja.cierre_parcial}}</td>
-                    <td>${{caja.retiro_parcial_transferencia}}</td>
-                    <td>${{caja.total_transferencia}}</td>
-                    <td>${{caja.total_final}}</td>
+                    <td>${{caja.abierta.apertura}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.t_transferencia}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.total_ventas_dia}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.cierre_parcial_efectivo}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.retiro_parcial_transferencia}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.total_transferencia}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.total_dinero_en_caja}}</td> <!-- Aquí estás usando caja.abierta -->
                 </tr>
             </tbody>
         </table>
     </div>
-    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cierreParcialModal" {{#unless (eq
-        userRole 'admin' )}}disabled class="disabled" {{/unless}}>
+
+    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cierreParcialModal" {{#unless
+        (eq userRole 'admin' )}}disabled class="disabled" {{/unless}}>
         Retiro Parcial Efectivo
     </button>
-    
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cierreParcialModal" {{#unless (eq
-        userRole 'admin' )}}disabled class="disabled" {{/unless}}>
+
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#retiroTransferenciaModal"
+        {{#unless (eq userRole 'admin' )}}disabled class="disabled" {{/unless}}>
         Retiro Parcial Transferencia
     </button>
+
+    <button type="button" class="btn btn-danger" id="cerrarCajaBtn" {{#unless (eq userRole 'admin' )}}disabled
+        class="disabled" {{/unless}}>Cerrar Caja</button>
+
+    {{#if caja.cerrada}}
+    <div class="row mt-4">
+        <h3>Estado de la Caja Cerrada</h3>
+        <table class="table disabled">
+            <thead>
+                <tr>
+                    <th>Apertura</th>
+                    <th>Ventas Transferencia</th>
+                    <th>Ventas Efectivo</th>
+                    <th>Retiro Efectivo</th>
+                    <th>Retiro Transferencia</th>
+                    <th>Total Transferencia</th>
+                    <th>Total Dinero en Caja</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>${{caja.cerrada.apertura}}</td> 
+                    <td>${{caja.cerrada.t_transferencia}}</td> 
+                    <td>${{caja.cerrada.total_ventas_dia}}</td> 
+                    <td>${{caja.cerrada.cierre_parcial_efectivo}}</td> 
+                    <td>${{caja.cerrada.retiro_parcial_transferencia}}</td> 
+                    <td>${{caja.cerrada.total_transferencia}}</td> 
+                    <td>${{caja.cerrada.total_dinero_en_caja}}</td> 
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    {{/if}}
+
     <div class="modal fade" id="cierreParcialModal" tabindex="-1" aria-labelledby="cierreParcialModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
@@ -46,7 +81,7 @@
                 <div class="modal-body">
                     <form id="cierreParcialForm">
                         <div class="mb-3">
-                            <label for="cierre_parcial" class="form-label ">Cierre Parcial</label>
+                            <label for="cierre_parcial" class="form-label">Cierre Parcial</label>
                             <input type="number" class="form-control" id="cierre_parcial" name="cierre_parcial"
                                 required>
                         </div>
@@ -140,6 +175,22 @@
                 location.reload();
             } else {
                 alert('Error al procesar el retiro parcial transferencia.');
+            }
+        });
+
+        document.getElementById('cerrarCajaBtn').addEventListener('click', async function () {
+            const response = await fetch('/cerrarCaja', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+
+            if (response.ok) {
+                alert('Caja cerrada correctamente.');
+                location.reload();
+            } else {
+                alert('Error al cerrar la caja.');
             }
         });
     });
