--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -19,13 +19,13 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>${{caja.abierta.apertura}}</td> <!-- Aquí estás usando caja.abierta -->
-                    <td>${{caja.abierta.t_transferencia}}</td> <!-- Aquí estás usando caja.abierta -->
-                    <td>${{caja.abierta.total_ventas_dia}}</td> <!-- Aquí estás usando caja.abierta -->
-                    <td>${{caja.abierta.cierre_parcial_efectivo}}</td> <!-- Aquí estás usando caja.abierta -->
-                    <td>${{caja.abierta.retiro_parcial_transferencia}}</td> <!-- Aquí estás usando caja.abierta -->
-                    <td>${{caja.abierta.total_transferencia}}</td> <!-- Aquí estás usando caja.abierta -->
-                    <td>${{caja.abierta.total_dinero_en_caja}}</td> <!-- Aquí estás usando caja.abierta -->
+                    <td>${{caja.abierta.apertura}}</td>
+                    <td>${{caja.abierta.t_transferencia}}</td>
+                    <td>${{caja.abierta.total_ventas_dia}}</td>
+                    <td>${{caja.abierta.cierre_parcial_efectivo}}</td>
+                    <td>${{caja.abierta.retiro_parcial_transferencia}}</td>
+                    <td>${{caja.abierta.total_transferencia}}</td>
+                    <td>${{caja.abierta.total_dinero_en_caja}}</td>
                 </tr>
             </tbody>
         </table>
