Correccion de fecha de cierre de caja

--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -46,7 +46,7 @@
 
     {{#if caja.cerrada}}
     <div class="row mt-4">
-        <h3>Estado de la Caja Cerrada ({{moment caja.cerrada.fecha_cierre "DD/MM/YYYY HH:mm:ss"}})</h3>
+        <h3>Estado de la Caja Cerrada ({{moment fechaCierre "DD/MM/YYYY HH:mm:ss"}})</h3>
         <table class="table disabled">
             <thead>
                 <tr>
