--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     display: grid;
     place-items: center;
     gap: 50px;
@@ -9,31 +9,33 @@ body{
     font-family: "Poppins";
 }
 
-@media (width >= 500px){
-    body{padding: 0;}
+@media (width >=500px) {
+    body {
+        padding: 0;
+    }
 
-    .card{
+    .card {
         margin: 0;
         width: 360px;
     }
 }
 
-.background{
+.background {
     position: fixed;
     top: -50vmin;
     left: -50vmin;
     width: 100vmin;
-    height:  100vmin;
+    height: 100vmin;
     border-radius: 47% 53% 61% 39% / 45% 51% 49% 55%;
     background: #65c8ff;
 }
 
-.card{
+.card {
     overflow: hidden;
     position: relative;
     z-index: 3;
     width: 54%;
-    margin: 0 20px;  
+    margin: 0 20px;
     padding: 170px 30px 54px;
     border-radius: 24px;
     background: #ffffff;
@@ -41,7 +43,7 @@ body{
     box-shadow: 0 100px 100px rgb(0, 0, 0 / 10%);
 }
 
-.card::before{
+.card::before {
     content: "";
     position: absolute;
     top: -880px;
@@ -53,7 +55,7 @@ body{
     background: #216ce7;
 }
 
-.background::after{
+.background::after {
     content: "";
     position: inherit;
     right: -50vmin;
@@ -64,7 +66,7 @@ body{
     background: #143d81;
 }
 
-.card .logo{
+.card .logo {
     position: absolute;
     top: 30px;
     left: 50%;
@@ -73,7 +75,7 @@ body{
     height: 64px;
 }
 
-.card > h2 {
+.card>h2 {
     font-size: 32px;
     font-weight: 400;
     margin: 0 0 38px;
@@ -81,38 +83,38 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.form{
+.form {
     margin: 0 0 44px;
     display: grid;
     gap: 12px;
 }
 
-.form
-:is(input, button){
+.form :is(input, button) {
     width: 100%;
     height: 56px;
-    border-radius: 28px;
+    border-radius: 35px;
+    /* Incrementar el borde redondeado */
     font-size: 16px;
     font-family: inherit;
 }
 
-.form > input{
+.form>input {
     border: 0;
     padding: 0 24px;
     color: #222222;
     background: #ededed;
     width: 90%;
     margin-left: 20px;
-    
+
 }
 
-.form > input::placeholder{
+.form>input::placeholder {
     color: rgb(0 0 0 /28%);
     font-size: 25px;
     text-align: center;
 }
 
-.form > button{
+.form>button {
     border: 0;
     color: #f9f9f9;
     background: #226ce7;
@@ -129,16 +131,23 @@ body{
 
 
 /*------------------------------------------------------------------------------ADMIN--------------------------------------------------------------------------------------------------*/
-#admin-header{
+#admin-header {
     width: 100%;
     height: 100%;
     background-color: #fafafa;
 }
 
 
-/*----------------------------------------------------------------------------EMPLEADOS---------------------------------------------------------------------------------------------------*/
-#empleado-header{
-    width: 100%;
-    height: 100%;
-    background-color: chartreuse;
+#bg-apertura{
+    background-color: #919191;
+    color: rgb(8, 0, 0);
+}
+
+.table-container {
+    border: 2px solid #000;
+    /* Puedes ajustar el color y el grosor del borde según tu preferencia */
+    border-radius: 5px;
+    /* Opcional: para bordes redondeados */
+    overflow: auto;
+    /* Para manejar el desbordamiento si la tabla es muy grande */
 }
