--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,9 +1,9 @@
 {{> header}}
 
 <div class="container">
-    <h1>Lista de Productos</h1>
-    <div class="row mb-3 justify-content-center">
-        <div class="col-md-4 ">
+    <h1 class="text-center">Listado de Productos</h1>
+    <div class="row mb-3 justify-content-center mt-5">
+        <div class="col-md-4">
             <input type="text" id="searchInput" class="form-control" placeholder="Buscar producto por descripción">
         </div>
         <div class="col-md-2">
