--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,12 +67,15 @@ body {
 }
 
 .card .logo {
+    display: flex;
+    flex-direction: row;
     position: absolute;
     top: 30px;
     left: 50%;
     translate: -50% 0;
     width: 64px;
     height: 64px;
+    margin-left: -30px;
 }
 
 .card>h2 {
