--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,10 @@
 
 <div class="background"></div>
 <div class="card">
-    <img src="image/burger.png" alt="burger" class="logo">
+    <div class="logo">
+    <img src="image/burger.png" alt="burger" >
+    <img src="image/hotdog.png" alt="">
+    </div>
     <h2>Bienvenido a Burger Ariel</h2>
     <form class="form" action="/login" method="post">
         <label for="username"></label>
